force-app/main/default/objects/Case/fields/April_09__c.field-meta.xml
<CustomField>
    <fullName>April_09__c</fullName>
    <label>April 09</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>