force-app/main/default/objects/Case/fields/Case_Age__c.field-meta.xml
<CustomField>
    <fullName>Case_Age__c</fullName>
    <formula>IF((Today()&lt; Settlement_Due_Date__c ),0,ROUND((Today()- Settlement_Due_Date__c ),0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>