force-app/main/default/objects/Case/fields/CFM_Contact__c.field-meta.xml
<CustomField>
    <fullName>CFM_Contact__c</fullName>
    <label>CFM Contact</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RFM_Contact__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Alexendre Bailly</fullName>
            </value>
            <value>
                <fullName>Arnaud Payot</fullName>
            </value>
            <value>
                <fullName>Alexandra Stevens</fullName>
            </value>
            <value>
                <fullName>Andrew Tan</fullName>
            </value>
            <value>
                <fullName>Deborah Stewart</fullName>
            </value>
            <value>
                <fullName>Elda Ho</fullName>
            </value>
            <value>
                <fullName>Jan Rode</fullName>
            </value>
            <value>
                <fullName>Jessica Ching</fullName>
            </value>
            <value>
                <fullName>Joern Schmidt</fullName>
            </value>
            <value>
                <fullName>Kashif Arshad</fullName>
            </value>
            <value>
                <fullName>Norulaiza  Norulaiza</fullName>
            </value>
            <value>
                <fullName>Mine Dindar</fullName>
            </value>
            <value>
                <fullName>Nadia KadirBawah</fullName>
            </value>
            <value>
                <fullName>Nguyen-thi dung</fullName>
            </value>
            <value>
                <fullName>Rona Lynch</fullName>
            </value>
            <value>
                <fullName>Smile Gillegean</fullName>
            </value>
            <value>
                <fullName>Stewart Waters</fullName>
            </value>
            <value>
                <fullName>Valerie Kay</fullName>
            </value>
            <value>
                <fullName>Wimon Udompongsanont</fullName>
            </value>
            <value>
                <fullName>Ray Mccarthy</fullName>
            </value>
            <value>
                <fullName>Yvonne Phua</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>