force-app/main/default/objects/Case/fields/CFM_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>CFM_Email_Id__c</fullName>
    <description>Cluster Finance Manager Email ID</description>
    <label>CFM Email Id</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CFM_Contact__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>A.Bailly@shell.com</fullName>
            </value>
            <value>
                <fullName>A.Payot@shell.com</fullName>
            </value>
            <value>
                <fullName>Alexandra.Stevens@shell.com</fullName>
            </value>
            <value>
                <fullName>Andrew.A.Tan@shell.com</fullName>
            </value>
            <value>
                <fullName>Deborah.Stewart@shell.com</fullName>
            </value>
            <value>
                <fullName>Elda.Ho@shell.com</fullName>
            </value>
            <value>
                <fullName>Jan.Rode@shell.com</fullName>
            </value>
            <value>
                <fullName>Jessica.Ching@shell.com</fullName>
            </value>
            <value>
                <fullName>Joern.Schmidt@shell.com</fullName>
            </value>
            <value>
                <fullName>Kashif.Arshad@shell.com</fullName>
            </value>
            <value>
                <fullName>M.Norulaiza@shell.com</fullName>
            </value>
            <value>
                <fullName>Mine.Dindar@shell.com</fullName>
            </value>
            <value>
                <fullName>Nadia.KadirBawah@shell.com</fullName>
            </value>
            <value>
                <fullName>Nguyen-thi.dung@shell.com</fullName>
            </value>
            <value>
                <fullName>Rona.Lynch@shell.om</fullName>
            </value>
            <value>
                <fullName>Smile.Gillegean@shell.com</fullName>
            </value>
            <value>
                <fullName>Stewart.Waters@shell.com</fullName>
            </value>
            <value>
                <fullName>Valerie.Kay@shell.com</fullName>
            </value>
            <value>
                <fullName>W.Udompongsanont@shell.com</fullName>
            </value>
            <value>
                <fullName>Ray.A.Mccarthy@shell.com</fullName>
            </value>
            <value>
                <fullName>Yvonne.Phua@shell.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>