force-app/main/default/objects/Case/fields/FP_Contact__c.field-meta.xml
<CustomField>
    <fullName>FP_Contact__c</fullName>
    <label>FP Contact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>CFM_Contact__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Alexendre Bailly</fullName>
            </value>
            <value>
                <fullName>Arnaud Payot</fullName>
            </value>
            <value>
                <fullName>Aisyah Namirah</fullName>
            </value>
            <value>
                <fullName>Alexandra Stevens</fullName>
            </value>
            <value>
                <fullName>Amelie Diowo</fullName>
            </value>
            <value>
                <fullName>Andrew Tan</fullName>
            </value>
            <value>
                <fullName>Annick Pairel</fullName>
            </value>
            <value>
                <fullName>Asmah Ali</fullName>
            </value>
            <value>
                <fullName>Benjapa Kanchanapiboon</fullName>
            </value>
            <value>
                <fullName>Bui-Tan Thai</fullName>
            </value>
            <value>
                <fullName>Cameron Kaveh-Ahangari</fullName>
            </value>
            <value>
                <fullName>Cassharine Niam</fullName>
            </value>
            <value>
                <fullName>Chia-Lee Ho</fullName>
            </value>
            <value>
                <fullName>Chin-Hwee lim</fullName>
            </value>
            <value>
                <fullName>Cut Malahayati</fullName>
            </value>
            <value>
                <fullName>Damri Tresukosol</fullName>
            </value>
            <value>
                <fullName>Debbie Lim</fullName>
            </value>
            <value>
                <fullName>Dirk Abend</fullName>
            </value>
            <value>
                <fullName>Donald Kleppelid</fullName>
            </value>
            <value>
                <fullName>Elaine Telfer</fullName>
            </value>
            <value>
                <fullName>Elda Ho</fullName>
            </value>
            <value>
                <fullName>Eleonora Misiarz</fullName>
            </value>
            <value>
                <fullName>Emerson Tan</fullName>
            </value>
            <value>
                <fullName>Eric LeGall</fullName>
            </value>
            <value>
                <fullName>Eva Tsang</fullName>
            </value>
            <value>
                <fullName>Ganesh Sethuraman</fullName>
            </value>
            <value>
                <fullName>Guat-Eng Chuah</fullName>
            </value>
            <value>
                <fullName>Gulissara Dechmee</fullName>
            </value>
            <value>
                <fullName>GXSSSCCHGermanyBanking</fullName>
            </value>
            <value>
                <fullName>Hairul Anuar Saludin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>