force-app/main/default/objects/Case/fields/FP_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>FP_Email_Id__c</fullName>
    <label>FP Email Id</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>CFM_Contact__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>A.Bailly@shell.com</fullName>
            </value>
            <value>
                <fullName>A.Payot@shell.com</fullName>
            </value>
            <value>
                <fullName>Aisyah.Namirah@shell.com</fullName>
            </value>
            <value>
                <fullName>Alexandra.Stevens@shell.com</fullName>
            </value>
            <value>
                <fullName>Amelie.Diowo@shell.com</fullName>
            </value>
            <value>
                <fullName>Andrew.A.Tan@shell.com</fullName>
            </value>
            <value>
                <fullName>Annick.Pairel@Shell.com</fullName>
            </value>
            <value>
                <fullName>Asmah.Ali@shell.com</fullName>
            </value>
            <value>
                <fullName>B.Kanchanapiboon@shell.com</fullName>
            </value>
            <value>
                <fullName>Bui-Tan.Thai@shell.com</fullName>
            </value>
            <value>
                <fullName>C.Kaveh-Ahangari@shell.com</fullName>
            </value>
            <value>
                <fullName>Cassharine.Niam@shell.com</fullName>
            </value>
            <value>
                <fullName>Chia-Lee.Ho@shell.com</fullName>
            </value>
            <value>
                <fullName>Chin-Hwee.lim@shell.com</fullName>
            </value>
            <value>
                <fullName>Cut.Malahayati@shell.com</fullName>
            </value>
            <value>
                <fullName>Damri.Tresukosol@shell.com</fullName>
            </value>
            <value>
                <fullName>Debbie.Lim@shell.com</fullName>
            </value>
            <value>
                <fullName>Dirk.Abend@shell.com</fullName>
            </value>
            <value>
                <fullName>Donald.Kleppelid@shell.com</fullName>
            </value>
            <value>
                <fullName>Elaine.Telfer@shell.com</fullName>
            </value>
            <value>
                <fullName>Elda.Ho@shell.com</fullName>
            </value>
            <value>
                <fullName>Eleonora.Misiarz@shell.com</fullName>
            </value>
            <value>
                <fullName>Emerson.Tan@shell.com</fullName>
            </value>
            <value>
                <fullName>Eric.LeGall@shell.com</fullName>
            </value>
            <value>
                <fullName>Eva.Tsang@shell.com</fullName>
            </value>
            <value>
                <fullName>Ganesh.Sethuraman@shell.com</fullName>
            </value>
            <value>
                <fullName>Guat-Eng.Chuah@shell.com</fullName>
            </value>
            <value>
                <fullName>Gulissara.Dechmee@shell.com</fullName>
            </value>
            <value>
                <fullName>GXSSSCCHGermanyBanking@shell.com</fullName>
            </value>
            <value>
                <fullName>H.Saludin@shell.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>