force-app/main/default/objects/Case/fields/Line_of_business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_business__c</fullName>
    <label>Line of business</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Shell_Entity_Name__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Aviation</fullName>
            </value>
            <value>
                <fullName>Bitumen</fullName>
            </value>
            <value>
                <fullName>Commercial Fuels</fullName>
            </value>
            <value>
                <fullName>LPG</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>