force-app/main/default/objects/Case/fields/OU_Poistion__c.field-meta.xml
<CustomField>
    <fullName>OU_Poistion__c</fullName>
    <label>OU Poistion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In the money</fullName>
            </value>
            <value>
                <fullName>Out of the money</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>