force-app/main/default/objects/Case/fields/RFM_Contact__c.field-meta.xml
<CustomField>
    <fullName>RFM_Contact__c</fullName>
    <label>RFM Contact</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Shell_Entity_Name__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Celeste Ho</fullName>
            </value>
            <value>
                <fullName>Stewart Waters</fullName>
            </value>
            <value>
                <fullName>Wilbert Arends</fullName>
            </value>
            <value>
                <fullName>Dominic Corley</fullName>
            </value>
            <value>
                <fullName>Yvonne Phua</fullName>
            </value>
            <value>
                <fullName>Hilmi Yusof</fullName>
            </value>
            <value>
                <fullName>Soo-Lim Goh</fullName>
            </value>
            <value>
                <fullName>Tjeerd Anema</fullName>
            </value>
            <value>
                <fullName>Arnaud Payot</fullName>
            </value>
            <value>
                <fullName>Tanya Lam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>