force-app/main/default/objects/Case/fields/RFM_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>RFM_Email_Id__c</fullName>
    <label>RFM Email Id</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RFM_Contact__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Celeste.Ho@shell.com</fullName>
            </value>
            <value>
                <fullName>Stewart.Waters@shell.com</fullName>
            </value>
            <value>
                <fullName>Wilbert.Arends@shell.com</fullName>
            </value>
            <value>
                <fullName>Dominic.Corley@shell.com</fullName>
            </value>
            <value>
                <fullName>Yvonne.Phua@shell.com</fullName>
            </value>
            <value>
                <fullName>Hilmi.Yusof@shell.com</fullName>
            </value>
            <value>
                <fullName>Soo-Lim.Goh@shell.com</fullName>
            </value>
            <value>
                <fullName>Tjeerd.Anema@shell.com</fullName>
            </value>
            <value>
                <fullName>A.Payot@shell.com</fullName>
            </value>
            <value>
                <fullName>Tanya.Lam@shell.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>