force-app/main/default/objects/Case/fields/SAP_Vendor_No__c.field-meta.xml
<CustomField>
    <fullName>SAP_Vendor_No__c</fullName>
    <label>SAP Vendor No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>