force-app/main/default/objects/Case/fields/Settlement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Amount__c</fullName>
    <label>Settlement Net Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>