force-app/main/default/objects/Case/fields/Settlement_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Due_Date__c</fullName>
    <label>Settlement Due Date</label>
    <type>Date</type>
</CustomField>