force-app/main/default/objects/Case/fields/Settlement_Month__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Month__c</fullName>
    <label>Settlement Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jan-12</fullName>
            </value>
            <value>
                <fullName>Feb-12</fullName>
            </value>
            <value>
                <fullName>Mar-12</fullName>
            </value>
            <value>
                <fullName>Apr-12</fullName>
            </value>
            <value>
                <fullName>May-12</fullName>
            </value>
            <value>
                <fullName>Jun-12</fullName>
            </value>
            <value>
                <fullName>Jul-12</fullName>
            </value>
            <value>
                <fullName>Aug-12</fullName>
            </value>
            <value>
                <fullName>Sep-12</fullName>
            </value>
            <value>
                <fullName>Oct-12</fullName>
            </value>
            <value>
                <fullName>Nov-12</fullName>
            </value>
            <value>
                <fullName>Dec-12</fullName>
            </value>
            <value>
                <fullName>Jan-13</fullName>
            </value>
            <value>
                <fullName>Feb-13</fullName>
            </value>
            <value>
                <fullName>Mar-13</fullName>
            </value>
            <value>
                <fullName>Apr-13</fullName>
            </value>
            <value>
                <fullName>May-13</fullName>
            </value>
            <value>
                <fullName>Jun-13</fullName>
            </value>
            <value>
                <fullName>Jul-13</fullName>
            </value>
            <value>
                <fullName>Aug-13</fullName>
            </value>
            <value>
                <fullName>Sep-13</fullName>
            </value>
            <value>
                <fullName>Oct-13</fullName>
            </value>
            <value>
                <fullName>Nov-13</fullName>
            </value>
            <value>
                <fullName>Dec-13</fullName>
            </value>
            <value>
                <fullName>Jan-14</fullName>
            </value>
            <value>
                <fullName>Feb-14</fullName>
            </value>
            <value>
                <fullName>Mar-14</fullName>
            </value>
            <value>
                <fullName>Apr-14</fullName>
            </value>
            <value>
                <fullName>May-14</fullName>
            </value>
            <value>
                <fullName>Jun-14</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>