force-app/main/default/objects/Case/fields/Shell_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Shell_Entity_Name__c</fullName>
    <label>Shell Entity Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Belgian Shell NV</fullName>
            </value>
            <value>
                <fullName>Belgian Shell SA</fullName>
            </value>
            <value>
                <fullName>Butagazs</fullName>
            </value>
            <value>
                <fullName>DANSK Shell</fullName>
            </value>
            <value>
                <fullName>Irish Shell</fullName>
            </value>
            <value>
                <fullName>Motiva Enterprises LLC</fullName>
            </value>
            <value>
                <fullName>OY Shell AB</fullName>
            </value>
            <value>
                <fullName>Pilipinas Shell Petroleum Corporation</fullName>
            </value>
            <value>
                <fullName>PT Shell Indonesia</fullName>
            </value>
            <value>
                <fullName>Sannes AB</fullName>
            </value>
            <value>
                <fullName>Shell Austria Gesellschaft MBH</fullName>
            </value>
            <value>
                <fullName>Shell Aviation</fullName>
            </value>
            <value>
                <fullName>Shell Aviation Ireland Limited</fullName>
            </value>
            <value>
                <fullName>Shell Canada Energy</fullName>
            </value>
            <value>
                <fullName>Shell Canada Products</fullName>
            </value>
            <value>
                <fullName>Shell Chile Sociedad Anonima Comercial</fullName>
            </value>
            <value>
                <fullName>Shell Compagnia de Argentina</fullName>
            </value>
            <value>
                <fullName>Shell Company of Turkey</fullName>
            </value>
            <value>
                <fullName>Shell CZECH Republic AS</fullName>
            </value>
            <value>
                <fullName>Shell Deutscheland Oil GMBH</fullName>
            </value>
            <value>
                <fullName>Shell Direct GMBH</fullName>
            </value>
            <value>
                <fullName>Shell Eastern Petroleum Limited</fullName>
            </value>
            <value>
                <fullName>Shell Eastern Trading (Pte) Limited</fullName>
            </value>
            <value>
                <fullName>Shell Espana SA</fullName>
            </value>
            <value>
                <fullName>SHELL GAS LTD - UK</fullName>
            </value>
            <value>
                <fullName>Shell Hellas AE Oil and Chemicals Co</fullName>
            </value>
            <value>
                <fullName>Shell Hong Kong Limited</fullName>
            </value>
            <value>
                <fullName>Shell Italia SPA</fullName>
            </value>
            <value>
                <fullName>Shell Malasyia Trading Sendirian Bhd</fullName>
            </value>
            <value>
                <fullName>Shell Marine Product Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>